--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,13 +1,13 @@
-name: Test, Bump, and Publish
+name: Publish DollarImport
 
 on:
-  workflow_dispatch: {}          # allows manual run
+  workflow_dispatch: {}       # allows manual trigger
   push:
     branches:
       - main
 
 jobs:
-  test-build-publish:
+  build-and-publish:
     runs-on: ubuntu-latest
 
     steps:
@@ -19,15 +19,10 @@ jobs:
         with:
           python-version: "3.11"
 
-      - name: Install dependencies
+      - name: Install build tools
         run: |
           python -m pip install --upgrade pip
-          pip install -e .[test]
           pip install build twine
-
-      - name: Run tests
-        run: |
-          python -m unittest discover -s tests
 
       - name: Bump version
         id: bump_version
@@ -35,9 +30,7 @@ jobs:
           VERSION_FILE="pyproject.toml"
           OLD_VER=$(grep '^version =' $VERSION_FILE | awk -F'"' '{print $2}')
           echo "Old version: $OLD_VER"
-          # increase last number by 0.1
           IFS='.' read -r MAJOR MINOR PATCH <<< "$OLD_VER"
-          # round to 1 decimal to avoid floating point precision issues
           NEW_PATCH=$(python -c "print(f'{float($PATCH)+0.1:.1f}')")
           NEW_VER="$MAJOR.$MINOR.$NEW_PATCH"
           echo "New version: $NEW_VER"
